update responsive all device resume

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Recruiter Landing Page</title>
     <!-- Google Fonts: Manrope -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link rel="icon" href="assets/aldika3.png" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&amp;display=swap"
@@ -53,6 +54,7 @@
       }
     </style>
   </head>
+
   <body
     class="bg-background-light dark:bg-background-dark font-display transition-colors duration-200"
   >
