--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About Me</title>
     <!-- Google Fonts: Manrope -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link rel="icon" href="assets/aldika3.png" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&amp;display=swap"
