--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,7 @@
       body {
         font-family: 'Manrope', sans-serif;
         -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
       }
       @page {
         margin: 0;
@@ -29,9 +30,9 @@
       }
     </style>
   </head>
-  <body class="bg-white text-slate-900 p-8 max-w-4xl mx-auto">
+  <body class="bg-white text-slate-900 p-4 md:p-8 max-w-4xl mx-auto">
     <!-- Action Bar (Hidden in Print) -->
-    <div class="no-print fixed top-4 right-4 flex gap-2">
+    <div class="no-print fixed top-4 right-4 z-50 flex gap-2">
       <button
         onclick="window.print()"
         class="bg-blue-600 text-white px-4 py-2 rounded-lg font-bold shadow-lg hover:bg-blue-700 transition"
@@ -48,23 +49,23 @@
 
     <!-- Header -->
     <header class="border-b-2 border-slate-900 pb-6 mb-6">
-      <div class="flex items-center gap-6">
+      <div class="flex flex-col md:flex-row items-center md:items-start gap-4 md:gap-6 text-center md:text-left">
         <div
-          class="h-24 w-24 rounded-full bg-slate-200 overflow-hidden mb-4 shrink-0 border-2 border-slate-900"
+          class="h-24 w-24 rounded-full bg-slate-200 overflow-hidden mb-4 shrink-0 border-2 border-slate-900 md:mb-0"
         >
           <!-- Using the same image URL as index.html -->
           <img src="assets/aldika2.jpeg" class="h-full w-full object-cover" />
         </div>
         <div>
-          <h1 class="text-4xl font-extrabold tracking-tight uppercase">Aldika Gagah Prasetya</h1>
+          <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight uppercase">Aldika Gagah Prasetya</h1>
           <p class="text-xl text-blue-600 font-bold tracking-wide mt-1">
             Junior Full-Stack Developer
           </p>
-          <div class="flex gap-4 mt-2 text-sm text-slate-600 font-medium">
+          <div class="flex flex-wrap justify-center md:justify-start gap-2 md:gap-4 mt-2 text-sm text-slate-600 font-medium">
             <span>Cilacap, Central Java, Indonesia</span>
-            <span>•</span>
+            <span class="hidden md:inline">•</span>
             <span>aldikagpofficial@gmail.com</span>
-            <span>•</span>
+            <span class="hidden md:inline">•</span>
             <span>linkedin.com/in/aldika-prasetya</span>
           </div>
         </div>
@@ -76,7 +77,7 @@
       <h2 class="text-sm font-bold uppercase border-b border-slate-300 pb-1 mb-3">
         Professional Summary
       </h2>
-      <p class="text-sm text-slate-700 leading-relaxed">
+      <p class="text-sm text-slate-700 leading-relaxed text-justify md:text-left">
         Junior developer with a strong interest in backend development. Experienced in building
         RESTful APIs using <strong>Go (Fiber)</strong> and working with <strong>MongoDB</strong>.
         Passionate about learning clean architecture, backend fundamentals, and scalable system
@@ -89,7 +90,7 @@
       <h2 class="text-lg font-bold text-slate-900 uppercase border-b border-slate-300 mb-4 pb-1">
         Technical Skills
       </h2>
-      <div class="grid grid-cols-2 gap-x-8 gap-y-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-4">
         <div>
           <h3 class="font-bold text-blue-600 text-sm mb-2">Frontend</h3>
           <ul class="text-sm text-slate-700 list-disc list-inside space-y-1">
@@ -126,6 +127,7 @@
         <p class="text-blue-600 text-sm font-semibold mb-2">
           Bharata Task Management || PT. Bharata International
         </p>
+
 
         <ul class="list-disc list-inside text-sm text-slate-700 space-y-1">
           <li>
