add cursore fitur

--- a/about.html
+++ b/about.html
@@ -279,6 +279,7 @@
         </span>
       </button>
     </div>
+    <script src="assets/js/cursor-trail.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
