--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <header class="flex items-center justify-between p-5 pt-6 w-full max-w-lg mx-auto">
         <div class="flex items-center gap-2 text-gray-900 dark:text-white">
           <span class="material-symbols-outlined text-3xl text-primary">verified_user</span>
-          <span class="font-bold text-lg tracking-tight hidden sm:block">AM.Design</span>
+          <span class="font-bold text-lg tracking-tight hidden sm:block">AGP_Official</span>
         </div>
         <button
           class="theme-toggle flex size-10 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors text-gray-900 dark:text-white"
@@ -218,6 +218,7 @@
         </div>
       </footer>
     </div>
+    <script src="assets/js/cursor-trail.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
