--- a/resume.html
+++ b/resume.html
@@ -160,5 +160,6 @@
         // setTimeout(() => window.print(), 500); // Optional auto-print
       }
     </script>
+    <script src="assets/js/cursor-trail.js"></script>
   </body>
 </html>
