--- a/skills.html
+++ b/skills.html
@@ -442,6 +442,7 @@
       </div>
     </div>
   </body>
+  <script src="assets/js/cursor-trail.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/skills.js"></script>
 </html>
