update resume cv

--- a/about.html
+++ b/about.html
@@ -269,15 +269,13 @@
     <div
       class="fixed bottom-0 left-0 z-40 w-full p-4 bg-gradient-to-t from-background-light via-background-light to-transparent dark:from-background-dark dark:via-background-dark pt-8"
     >
-      <button
-        onclick="window.open('resume.html', '_blank')"
-        class="relative w-full overflow-hidden rounded-xl bg-primary py-4 text-center font-bold text-white shadow-lg shadow-primary/25 active:scale-[0.98] transition-all"
+      <a
+        href="resume.html"
+        class="relative w-full overflow-hidden rounded-xl bg-primary py-4 text-center font-bold text-white shadow-lg shadow-primary/25 active:scale-[0.98] transition-all flex items-center justify-center gap-2"
       >
-        <span class="relative z-10 flex items-center justify-center gap-2">
-          <span class="material-symbols-outlined">download</span>
-          Download Resume
-        </span>
-      </button>
+        <span class="material-symbols-outlined">description</span>
+        View Resume
+      </a>
     </div>
     <script src="assets/js/cursor-trail.js"></script>
     <script src="assets/js/main.js"></script>
